src/objects/loan__Savings_Product__c.object
<CustomObject>
    <fields>
        <fullName>loan__Accrued_Interest_Payable_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accrued Interest Payable Account</label>
        <referenceTo>loan__MF_Account__c</referenceTo>
        <relationshipLabel>Savings Products (Accrued Interest Payable)</relationshipLabel>
        <relationshipName>Savings_Products_A_I_P</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Allow_Early_Withdrawals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Early Withdrawals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Amount_applies_to__c</fullName>
        <label>Amount applies to</label>
        <picklist>
            <controllingField>loan__Type_of_Owner__c</controllingField>
            <picklistValues>
                <fullName>Entire Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entire Center</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Amount_for_Deposit__c</fullName>
        <label>Mandatory Amount or %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Balance_Used_for_Int_Rate_Calculation__c</fullName>
        <description>Only Compound Interest Calculation is supported
If changed, the changes are reflected in the Open accounts as soon as the change is detected by the Mifos system
If the attribute is modified, the interest installments should be recalculated.</description>
        <inlineHelpText>Only Compound Interest Calculation is supported
If changed, the changes are reflected in the Open accounts as soon as the change is detected by the Mifos system
If the attribute is modified, the interest installments should be recalculated.</inlineHelpText>
        <label>Balance Used for Interest Calculation</label>
        <picklist>
            <picklistValues>
                <fullName>Minimum Balance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average Balance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Cash_Fixed_Deposit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Fixed Deposit with Cash</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Deposit_Frequency__c</fullName>
        <label>Deposit Frequency</label>
        <picklist>
            <controllingField>loan__Type_of_Deposits__c</controllingField>
            <picklistValues>
                <fullName>Biweekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Fee_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Fee Set</description>
        <inlineHelpText>Fee Set</inlineHelpText>
        <label>Fee Set</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected Fee Set&apos;s category must be of type &apos;Savings&apos; and it should include at least one fee.</errorMessage>
            <filterItems>
                <field>loan__Fee_Set__c.loan__Number_of_Fees__c</field>
                <operation>notEqual</operation>
                <value>0</value>
            </filterItems>
            <filterItems>
                <field>loan__Fee_Set__c.loan__Fee_Set_Category__c</field>
                <operation>equals</operation>
                <value>Savings</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__Fee_Set__c</referenceTo>
        <relationshipLabel>Savings Products</relationshipLabel>
        <relationshipName>Savings_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Fixed_Deposit_Term__c</fullName>
        <label>Fixed Deposit Term (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Frequency_of_Int_Rate_Calc__c</fullName>
        <label>Frequency of Interest Calculation</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Frequency_of_Interest_Posting_to_Account__c</fullName>
        <description>Number of months
If this field is modified, recalculation is not required. The change affects the future interest calculations only.
If the frequency is changed in between two interest postings, interest should be recalculated with new frequency from the last posting date.
Note: Interest should be posted on the last day of the month for all the accounts.</description>
        <label>Frequency of Interest Posting (months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__GL_Code_Interest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>One GL Code each should be chosen from a list of acceptable GL Codes for interest.</description>
        <inlineHelpText>One GL Code each should be chosen from a list of acceptable GL Codes for interest.</inlineHelpText>
        <label>GL Code - Interest</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>loan__MF_Account__c.loan__Account_Type__r.Name</field>
                <operation>equals</operation>
                <value>20000 - LIABILITIES</value>
            </filterItems>
            <filterItems>
                <field>loan__MF_Account__c.loan__isLeaf__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__MF_Account__c</referenceTo>
        <relationshipLabel>Savings Products (GL Code - Interest)</relationshipLabel>
        <relationshipName>Savings_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__GL_Code_deposits__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>One GL Code each should be chosen from a list of acceptable GL Codes for deposits.</description>
        <inlineHelpText>One GL Code each should be chosen from a list of acceptable GL Codes for deposits.</inlineHelpText>
        <label>GL Code - deposits</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>loan__MF_Account__c.loan__isLeaf__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>loan__MF_Account__c.loan__Account_Type__r.Name</field>
                <operation>equals</operation>
                <value>20000 - LIABILITIES</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__MF_Account__c</referenceTo>
        <relationshipLabel>Savings Products</relationshipLabel>
        <relationshipName>Savings_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Expense_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interest Expense Account</label>
        <referenceTo>loan__MF_Account__c</referenceTo>
        <relationshipLabel>Savings Products (Interest Expense Account)</relationshipLabel>
        <relationshipName>Savings_Products_I_E_A</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Payable_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interest Payable Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select a Master GL.</errorMessage>
            <filterItems>
                <field>loan__MF_Account__c.loan__Is_Master__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__MF_Account__c</referenceTo>
        <relationshipLabel>Savings Products (Interests Payable)</relationshipLabel>
        <relationshipName>Savings_Products_I_P</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Rate__c</fullName>
        <description>nnualized rate is stored by the system.
In case of change in interest rate, system should calculate the interest using the new rate from the time of  change. . However the old interest rate should be recorded for reporting purposes.
E.g. Supposing the interest is to be posted on a monthly basis and on the 30th day the rate is changed. Interest should be calculated using the old rate for 29 days and use the new rate for 30th day and onwards.</description>
        <inlineHelpText>nnualized rate is stored by the system.
In case of change in interest rate, system should calculate the interest using the new rate from the time of  change. . However the old interest rate should be recorded for reporting purposes.</inlineHelpText>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Maintenance_Fees__c</fullName>
        <inlineHelpText>Frequency at which maintenance fees must be applied. The maintenance fee is picked up from the associated fee set. This option is ignored if the associated fee set does not have a fee with &apos;Time of Charge&apos; declared as &apos;Maintenance&apos;.</inlineHelpText>
        <label>Maintenance Fees</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Max_Amount_Per_Withdrawal__c</fullName>
        <description>Flat Amount of savings account.
This specifies the maximum amount that can be withdrawn from a savings account per day.
For a group savings account, this restriction applies to each withdrawal.
If left blank or “0”, then system does not assume any withdrawal limitations.</description>
        <inlineHelpText>Flat Amount of savings account.
This specifies the maximum amount that can be withdrawn from a savings account per day.
For a group savings account, this restriction applies to each withdrawal.</inlineHelpText>
        <label>Max Amount Per Withdrawal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Min_Balance_Required_for_Interest_Rate_c__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Interest is not calculated on accounts that have balance amounts below this number.
If left blank or “0”, then system does not assume any minimum balance required for interest.</description>
        <inlineHelpText>Interest is not calculated on accounts that have balance amounts below this number.
If left blank or “0”, then system does not assume any minimum balance required for interest.</inlineHelpText>
        <label>Min Balance for Interest Calc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Savings</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Savings_Product_Control_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Savings Product Control Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select a Master GL.</errorMessage>
            <filterItems>
                <field>loan__MF_Account__c.loan__Is_Master__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__MF_Account__c</referenceTo>
        <relationshipLabel>Savings Products (Savings Product Control Account)</relationshipLabel>
        <relationshipName>Savings_Products_C_A</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Savings_Product_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Savings Product External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Start_Date__c</fullName>
        <description>Savings Product Start Date</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Inactive</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Time_Period_for_Int_Rate_Calculation__c</fullName>
        <description>Number of months
If this field is modified, recalculation is not required. The change affects the future interest calculations only.</description>
        <inlineHelpText>Number of months
If this field is modified, recalculation is not required. The change affects the future interest calculations only.</inlineHelpText>
        <label>Time Period for Interest Calc (months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Type_of_Deposits__c</fullName>
        <description>Depending on this selection, system should show the correct set of GL codes to select from.</description>
        <label>Product Kind</label>
        <picklist>
            <controllingField>loan__Product_Type__c</controllingField>
            <picklistValues>
                <fullName>Voluntary</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Mandatory - Fixed Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mandatory - % of Loan Amount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Type_of_Owner__c</fullName>
        <description>Individual or Group Savings Account</description>
        <inlineHelpText>Individual or Group Savings Account</inlineHelpText>
        <label>Type of Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Center</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__maximum_amount_for_fixed_deposit__c</fullName>
        <inlineHelpText>maximum amount for fixed deposit.</inlineHelpText>
        <label>Maximum Amount for Fixed Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__minimum_amount_for_fixed_deposit__c</fullName>
        <inlineHelpText>Minimum amount for fixed deposit .</inlineHelpText>
        <label>Minimum Amount for Fixed Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Savings Product</label>
    <nameField>
        <label>Savings Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Savings Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>loan__Current_Account_Interest_Rate</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( loan__Product_Type__c , &apos;Current&apos;) 
&amp;&amp;
loan__Interest_Rate__c &gt; 0</errorConditionFormula>
        <errorMessage>For current accounts, interest rate must be 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__FD_Max_Min</fullName>
        <active>true</active>
        <description>FD Max and Min must make sense</description>
        <errorConditionFormula>ISPICKVAL(loan__Product_Type__c, &apos;Fixed&apos;)
&amp;&amp;
NOT(ISNULL(loan__maximum_amount_for_fixed_deposit__c))
&amp;&amp;
NOT(ISNULL(loan__minimum_amount_for_fixed_deposit__c))
&amp;&amp;
(loan__maximum_amount_for_fixed_deposit__c &lt;  loan__minimum_amount_for_fixed_deposit__c)</errorConditionFormula>
        <errorMessage>The Maximum amount is less than the minimum amount for the Fixed Deposit.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__FD_must_have_days_defined</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(loan__Product_Type__c, &apos;Fixed&apos;)
&amp;&amp;
ISNULL(loan__Fixed_Deposit_Term__c)</errorConditionFormula>
        <errorMessage>You must define the term for a Fixed Deposit.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Freq_Of_Int_Posting_less_than_calc</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(  loan__Frequency_of_Int_Rate_Calc__c  , &apos;Quarterly&apos;) 
&amp;&amp;
 loan__Frequency_of_Interest_Posting_to_Account__c &lt; 3</errorConditionFormula>
        <errorMessage>Frequency of Interest Posting cannot be less Frequency of Interest Calculation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Freq_Of_Int_Posting_valid</fullName>
        <active>true</active>
        <errorConditionFormula>loan__Frequency_of_Interest_Posting_to_Account__c &gt;12 ||
loan__Frequency_of_Interest_Posting_to_Account__c &lt; 1</errorConditionFormula>
        <errorMessage>Please enter a valid Frequency of Interest Posting in months (1-12)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Interest_Rate_Frequency_Related</fullName>
        <active>true</active>
        <errorConditionFormula>loan__Interest_Rate__c &gt; 0
&amp;&amp;
(ISNULL( loan__Frequency_of_Interest_Posting_to_Account__c )
    || loan__Frequency_of_Interest_Posting_to_Account__c &lt;= 0)</errorConditionFormula>
        <errorMessage>The frequency of interest posting cannot be zero if the interest rate is not zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Interest_Rate_Negative</fullName>
        <active>true</active>
        <errorConditionFormula>loan__Interest_Rate__c &lt; 0</errorConditionFormula>
        <errorDisplayField>loan__Interest_Rate__c</errorDisplayField>
        <errorMessage>The interest rate cannot be negative.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Interest_Rate_Time_Related</fullName>
        <active>true</active>
        <errorConditionFormula>loan__Interest_Rate__c &gt; 0
&amp;&amp;
(ISNULL( loan__Time_Period_for_Int_Rate_Calculation__c )
    || loan__Time_Period_for_Int_Rate_Calculation__c &lt;= 0)</errorConditionFormula>
        <errorMessage>The time period for interest calculation cannot be zero if the interest rate is not zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Mandatory_Must_have_Amount</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISPICKVAL( loan__Type_of_Deposits__c, &quot;Mandatory - Fixed Amount&quot; ),  ISBLANK(loan__Amount_for_Deposit__c), false)
||
IF(ISPICKVAL( loan__Type_of_Deposits__c, &quot;Mandatory - % of Loan Amount&quot; ),  ISBLANK(loan__Amount_for_Deposit__c) || loan__Amount_for_Deposit__c &gt; 100 || loan__Amount_for_Deposit__c &lt; 0, false)</errorConditionFormula>
        <errorDisplayField>loan__Amount_for_Deposit__c</errorDisplayField>
        <errorMessage>Recommended value for deposit amount is invalid</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Minimum_Balance</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( loan__Balance_Used_for_Int_Rate_Calculation__c  , &apos;Minimum Balance&apos;) 
&amp;&amp; 
(loan__Min_Balance_Required_for_Interest_Rate_c__c  &lt; 0
|| ISBLANK(loan__Min_Balance_Required_for_Interest_Rate_c__c))</errorConditionFormula>
        <errorMessage>Please enter a valid Minimum Balance for Interest Calculation (must be greater than or equal to 0)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Savings_Product_Name_check</fullName>
        <active>true</active>
        <errorConditionFormula>REGEX( Name , &quot;[a-bA-B0-9-\\s]&quot;)</errorConditionFormula>
        <errorMessage>Name can&apos;t include special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__maximum_deposite_greater_rule</fullName>
        <active>false</active>
        <errorConditionFormula>loan__minimum_amount_for_fixed_deposit__c  &gt; loan__maximum_amount_for_fixed_deposit__c</errorConditionFormula>
        <errorMessage>Maximum amount for fixed deposit should always greater than minimum amount for fixed deposit.</errorMessage>
    </validationRules>
</CustomObject>